--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "license": "ISC",
   "repository": {
     "type": "git",
-    "url": "git://github.com/superchromat/ocs-sdk-js.git"
+    "url": "git://github.com/superchromat/ocs-sdk-js.git" 
   },
+  "private": true
 }
